# rustdroid

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh  run.sh  uninstall.sh
.github/workflows/: ci.yml  host-integration.yml  publish-crate.yml  release.yml
docs/: 1.0-checklist.md  changelog-policy.md  ci-examples.md  first-install.md  fixture-testing.md  host-backend.md  package-distribution.md  performance-baselines.json  release-announcement-checklist.md  release-process.md  release-rollback.md  support-scope.md  troubleshooting.md  version-bump-checklist.md  versioning-policy.md
docs/performance-notes/: v0.1.0.md
docs/releases/: v0.1.0.md  v0.2.0.md
scripts/: check-cargo-distribution.sh  check-performance-baseline.sh  ci-host-check.sh  ci-package-check.sh  ci-shell-check.sh  generate-fixture-apks.sh  generate-release-notes.sh  generate-sample-pdfs.sh  package-release.sh  push-sample-pdfs.sh  run-smoke-matrix.sh  verify-release-install.sh
src/: config.rs  main.rs
src/adb/: mod.rs
src/apks/: mod.rs
src/cli/: mod.rs
src/diagnostics/: mod.rs
src/display/: mod.rs
src/docker/: mod.rs
src/emulator/: mod.rs
src/host/: mod.rs
src/logs/: mod.rs
src/output/: mod.rs
src/profiles/: mod.rs
src/runtime/: mod.rs
src/tooling/: mod.rs
tests/: README.md  docs_contract.rs  integration_cli.rs  integration_fixtures.rs  integration_host_backend.rs  integration_host_runtime.rs  release_contract.rs  smoke_cli.rs
tests/common/: mod.rs
tests/fixtures/: README.md  debug.keystore  manifest.json
tests/fixtures/apks/: arm64-native.apk  launch-success.apk  missing-launcher.apk  split-base.apk  split-config.en.apk  x86_64-native.apk
