[package]
name = "rustdroid"
version = "0.1.0"
edition = "2021"
description = "Fast Android APK orchestration on top of docker-android"
license = "MIT"

[dependencies]
anyhow = "1.0"
bollard = "0.18"
bytes = "1.11"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tokio = { version = "1.39", features = ["full"] }
toml = "0.8"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true
