[package]
name = "rustdroid"
version = "0.2.0"
edition = "2021"
description = "Fast host-first Android APK testing CLI"
license = "MIT"
repository = "https://github.com/OthmaneBlial/rustdroid"
homepage = "https://github.com/OthmaneBlial/rustdroid"
documentation = "https://github.com/OthmaneBlial/rustdroid#readme"
readme = "README.md"
keywords = ["android", "apk", "emulator", "testing", "cli"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "LICENSE",
    "docs/**",
    "install.sh",
    "uninstall.sh",
    "scripts/**",
    "src/**",
    "tests/**",
]

[dependencies]
anyhow = "1.0"
bollard = "0.18"
bytes = "1.11"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tempfile = "3.23"
tokio = { version = "1.39", features = ["full"] }
toml = "0.8"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true

[dev-dependencies]
